Fix bug in AStar replan all strategy